# tributary

./: .cspellrc.json  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  SECURITY.md  extract-spec.mjs  package-lock.json  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  main.tsx  styles.css
contracts/splitter/: Cargo.toml
contracts/splitter/src/: lib.rs  test.rs
contracts/splitter/src/test/: differential.rs
docs/: api-reference.md  architecture.md  freighter-setup.md  glossary.md  integrations.md  preview-payout.md
examples/cli/: README.md  package-lock.json  package.json  tsconfig.json
examples/embeddable-button/: README.md  index.html  package-lock.json  package.json
examples/node-create-and-pay/: README.md  package-lock.json  package.json  tsconfig.json
examples/node-deposit-and-distribute/: README.md  package-lock.json  package.json
examples/node-royalties-split/: README.md  package-lock.json  package.json
indexer/: .env.example  README.md  cli.mjs  config.mjs  cursor.mjs  cursor.test.mjs  index.mjs  index.test.mjs  package-lock.json  package.json  replay-command.mjs  replay.mjs  replay.test.mjs  rpc-backoff.mjs  rpc-backoff.test.mjs  storage.mjs
scripts/: deploy.sh
sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  test.js  tsconfig.json
sdk/src/: index.test.ts  index.ts  (+2 more)
spec-extractor/: Cargo.toml
(+40 files in other folders)
