[workspace]
resolver = "2"
members = ["contracts/splitter", "spec-extractor"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tributary-protocol/tributary"

[workspace.dependencies]
soroban-sdk = "27.0.0"
proptest = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
